# binarization_app

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp
include/: mainwindow.hpp
resources/: style.qss
src/: main.cpp  mainwindow.cpp
